--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 
-@import url("https://fonts.googleapis.com/css2?family=Monoton&family=Quicksand:wght@500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Climate+Crisis&family=Pacifico&display=swap" rel="stylesheet");
 
 * {
   margin: 0;
